Changed </a> tag to correct place to fix broken link

--- a/homework/homework1/moredetail.html
+++ b/homework/homework1/moredetail.html
@@ -39,7 +39,7 @@ HOMEWORK 1
 				<br />other sites, like the below links:
 				<br />
 				<br /><span class="finallinks">To check out more on binary computing, go to:</span>
-				<br /><a href="https://web.stanford.edu/class/cs101/bits-bytes.html"></a><span class="outsidepagelink">Click for more on binary in computing</span></span></a> 
+				<br /><a href="https://web.stanford.edu/class/cs101/bits-bytes.html"><span class="outsidepagelink">Click for more on binary in computing</span></a> 
 				<br />
 				<br /><span class="finallinks">And for still more on binary math:</span>
 				<br /><a href="https://www.mathsisfun.com/binary-number-system.html"><span class="outsidepagelink">Click for more on binary math!</span></a> 
